# bzlmodRio-ni

./: .bazelignore  MODULE.bazel  README.md  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  publish.yml
dependencies/cpp/ni/: BUILD.bazel
generate/: BUILD.bazel  MODULE.bazel  generate.py  generate_ni.py  get_ni_dependencies.py  publish.py
generate_ni/: BUILD.bazel  WORKSPACE  generate_ni_deps.py  get_ni_dependencies.py  module_config.jinja2  module_config.json.jinja2  publish_ni_deps.py
libraries/cpp/ni/: BUILD.bazel
private/cpp/chipobject/: BUILD.bazel  shared.BUILD.bazel
private/cpp/netcomm/: BUILD.bazel
private/cpp/runtime/: BUILD.bazel
private/cpp/visa/: BUILD.bazel
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: .bazelrc  MODULE.bazel  WORKSPACE
tests/cpp/ni/: BUILD.bazel  test.cpp
