module(
    name = "bzlmodrio-ni",
    compatibility_level = 2023,
    version = "2023.3.0",
)

# bazel_dep(name = "bazel_skylib", version = "1.1.1")
# bazel_dep(name = "platforms", version = "0.0.4")
# bazel_dep(name = "rules_cc", version = "0.0.2")
# bazel_dep(name = "rules_java", version = "5.1.0")

# bazel_dep(name = "rules_python", version = "0.12.0", dev_dependency=True)

bazel_dep(name = "bzlmodrio-gentool", version = "0.0.3")
bazel_dep(name = "rules_bazelrio", version = "0.0.5")
bazel_dep(name = "rules_roborio_toolchain", version = "2023-7.4")

setup_bzlmodrio_ni_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_ni_cpp_dependencies")

use_repo(
    setup_bzlmodrio_ni_cpp_dependencies,
    "bazelrio_edu_wpi_first_ni-libraries_chipobject_linuxathena",
    "bazelrio_edu_wpi_first_ni-libraries_visa_linuxathena",
    "bazelrio_edu_wpi_first_ni-libraries_runtime_linuxathena",
    "bazelrio_edu_wpi_first_ni-libraries_netcomm_linuxathena",
)
