cc_library(
    name = "ni",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": [
            "@bzlmodrio-ni//private/cpp/chipobject:shared",
            "@bzlmodrio-ni//private/cpp/netcomm:shared",
            "@bzlmodrio-ni//private/cpp/runtime:shared",
            "@bzlmodrio-ni//private/cpp/visa:shared",
        ],
        "//conditions:default": [],
    }),
)
