alias(
    name = "ni",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": [
            "@bzlmodrio-ni//private/cpp/chipobject:shared",
            "@bzlmodrio-ni//private/cpp/netcomm:shared",
            "@bzlmodrio-ni//private/cpp/runtime:shared",
            "@bzlmodrio-ni//private/cpp/visa:shared",
        ],
        "//conditions:default": [],
    }),

cc_library(
    name = "static",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-ni//private/cpp/netcomm:static",
        "@bzlmodrio-ni//private/cpp/runtime:static",
        "@bzlmodrio-ni//private/cpp/visa:static",
        "@bzlmodrio-ni//private/cpp/chipobject:static",
    ] + [
    ],
)