load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@bazel_tools//src/conditions:darwin": ["@platforms//:incompatible"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@platforms//:incompatible"],
        "@bazel_tools//src/conditions:windows": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-ni//:__subpackages__"],
    deps = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_ni-libraries_runtime_linuxathena//:shared_libs"],
    }),
)
