cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["@bzlmodrio-ni//:__subpackages__"],
    deps = ["@bazelrio_edu_wpi_first_ni-libraries_visa_headers//:headers"] + select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_edu_wpi_first_ni-libraries_visa_linuxathena//:shared_libs"],
    }),
)
