cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@bzlmodrio-ni//dependencies/cpp/ni"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "@bzlmodrio-ni//dependencies/cpp/ni",
        "@googletest//:gtest_main",
    ],
)
